# Drift

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  release-pypi.yml
docs/: example-databricks-workflow.yaml  example-model-retrainer.conf  example-training-dataset-registrator.conf
src/drift/: __init__.py  __main__.py
src/drift/config/: logging.ini
src/drift/registrating/: data_asset_registrator.py  dataset_registrator.py
src/drift/retraining/: job_group.py  model_retrainer.py  training_status_refresher.py
src/drift/tools/: azml.py
tests/: conftest.py  test_azml.py  test_data_asset_registrator.py  test_dataset_registrator.py  test_logging.py  test_model_retrainer.py  test_training_status_refresher.py
