[metadata]
name = Drift
description = Data Refresh and Intelligent Fast Training for Azure ML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AmadeusITGroup/Drift
author = Guillaume LECLERC, Simone DE SANTIS
author_email = no_reply@github.com
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11
setup_requires =
    setuptools_scm

